@@ -1,8 +1,8 @@
 Package: RPushbullet
 Type: Package
 Title: R interface to the wonderful Pushbullet service
-Version: 0.0.2
-Date: 2014-06-02
+Version: 0.0.2.1
+Date: 2014-06-10
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: This package provides an easy-to-use interface for the 
